<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_color"
    tools:context=".JapaneseDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/english_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtEnglish"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:autoSizeMaxTextSize="70sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:paddingStart="3sp"
                android:paddingEnd="3dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/text_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/japanese_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtJapanese"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/details_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtDetails"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:autoSizeMaxTextSize="60sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:paddingRight="3dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textStyle="normal|italic" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>